--- a/style.css
+++ b/style.css
@@ -15,17 +15,22 @@ img {
   max-width: 100%;
   height: auto;
 }
+
 .container {
   display: block;
   margin-left: auto;
   margin-right: auto;
   background-color: white;
-  padding-left: 15px;
-  padding-right: 15px;
+}
+header {
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
 }
 .nav-link {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 .hero {
@@ -44,36 +49,255 @@ img {
 .img-quality {
   position: absolute;
 }
-.parthner {
-  display: flex;
-}
-.parthners {
-  text-align: center;
-}
-.parthner-txt {
-  background-image: linear-gradient(to top, rgba(12, 12, 12, 0.438), rgba(8, 8, 8, 0.527)),
-    url('./img/truck1.jpg');
-  border-radius: 15px;
-  color: white;
-}
-.parthner-img {
-  position: absolute;
-}
 .advantages {
-  width: 1100px;
   margin-left: auto;
   margin-right: auto;
 }
 .technical-card {
   display: flex;
+  margin-left: auto;
+  margin-left: auto;
 }
+.manufacturing {
+  display: flex;
+}
+
+.foot-link {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+/* ------------------ */
+@media screen and (min-width: 480px) {
+  header {
+    width: 100%;
+  }
+  .advantages,
+  .container {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 460px;
+  }
+
+  .logo {
+    width: 70px;
+  }
+  .icon {
+    width: 30px;
+  }
+  .hero {
+    background-image: url('./img/webpc-passthrujpg.jpg');
+    width: 460px;
+    margin-top: 32px;
+  }
+  .hero-content {
+    width: 400px;
+    bottom: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 15px;
+  }
+  .hero-content h2 {
+    font-size: 25px;
+  }
+  .hero-content > h1 {
+    margin-top: 20px;
+  }
+  .advantages {
+    margin-top: 40px;
+  }
+  .img-quality {
+    width: 150px;
+    bottom: 5%;
+  }
+  .list-advantages {
+    margin-top: 30px;
+  }
+  .list-advantages li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .list-advantages-img {
+    width: 100px;
+  }
+  .list-advantages-txt {
+    margin-left: 50px;
+    margin-bottom: 10px;
+    padding: 20px;
+    font-size: 14px;
+    border-radius: 30px;
+    border: 4px solid transparent;
+    background: linear-gradient(#f5f5f5, #cfcfcf) padding-box,
+      linear-gradient(to right, #f3f3f3 0%, #d6d6d6 100%) border-box;
+    width: 400px;
+    height: 80px;
+    background-color: rgb(243, 228, 228);
+  }
+  .technical-card-h {
+    margin-top: 40px;
+  }
+  .technical-card {
+    background-image: url('./img/fon.jpg');
+    margin-top: 40px;
+    width: 100%;
+  }
+
+  .technical-card-img-one img {
+    width: 100px;
+  }
+  .technical-card-img-one {
+    display: flex;
+    justify-content: space-around;
+  }
+  .block-img-pinikey {
+    padding: 20px;
+  }
+  .pinikey {
+    margin-left: auto;
+    margin-right: auto;
+    width: 350px;
+  }
+  .technical-card {
+    flex-direction: column;
+  }
+  .technical-card-txt {
+    width: 100%;
+    font-size: 12px;
+  }
+  .manufacturing {
+    width: 450px;
+  }
+  .manufacturing img {
+    width: 230px;
+  }
+  .logo-footer {
+    width: 200px;
+  }
+}
+/* ------------------ */
+@media screen and (min-width: 768px) {
+  .advantages,
+  .container {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 748px;
+  }
+  .logo {
+    width: 70px;
+  }
+  .icon {
+    width: 30px;
+  }
+  .hero {
+    width: 748px;
+    margin-top: 30px;
+  }
+  .hero-content {
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 20px;
+  }
+  .hero-content h2 {
+    font-size: 30px;
+  }
+  .hero-content > h1 {
+    margin-top: 20px;
+  }
+  .advantages {
+    margin-top: 40px;
+  }
+  .img-quality {
+    width: 150px;
+    bottom: 5%;
+  }
+  .list-advantages {
+    margin-top: 30px;
+  }
+  .list-advantages li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .list-advantages-img {
+    width: 100px;
+  }
+  .list-advantages-txt {
+    margin-left: 50px;
+    margin-bottom: 10px;
+    padding: 20px;
+    font-size: 14px;
+    border-radius: 30px;
+    border: 4px solid transparent;
+    background: linear-gradient(#f5f5f5, #cfcfcf) padding-box,
+      linear-gradient(to right, #f3f3f3 0%, #d6d6d6 100%) border-box;
+    width: 900px;
+    height: 80px;
+    background-color: rgb(243, 228, 228);
+  }
+  .technical-card-h {
+    margin-top: 40px;
+  }
+  .technical-card {
+    background-image: url('./img/fon.jpg');
+    margin-top: 40px;
+    width: 748px;
+  }
+
+  .technical-card-img-one img {
+    width: 100px;
+  }
+  .technical-card-img-one div:first-child {
+    margin-top: 60px;
+  }
+  .technical-card-img-one div:nth-child(2n) {
+    margin-top: 180px;
+  }
+  .block-img-pinikey {
+    padding: 20px;
+  }
+  .pinikey {
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
+  }
+  .technical-card-txt {
+    padding: 60px 10px 0px 10px;
+    width: 50%;
+    font-size: 14px;
+  }
+  .manufacturing {
+    width: 748px;
+  }
+  .manufacturing img {
+    width: 374px;
+  }
+  .logo-footer {
+    width: 200px;
+  }
+}
+
+/* ------------------ */
 @media screen and (min-width: 1200px) {
+  .advantages,
   .container {
     width: 1200px;
   }
-
+  .logo {
+    width: 70px;
+  }
+  .icon {
+    width: 30px;
+  }
+  .hero {
+    width: 1200px;
+    margin-top: 35px;
+  }
   .hero-content {
-    bottom: 30%;
+    bottom: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -85,24 +309,78 @@ img {
   .hero-content > h1 {
     margin-top: 20px;
   }
+  .advantages {
+    margin-top: 40px;
+  }
   .img-quality {
+    width: 150px;
     bottom: 5%;
+  }
+  .list-advantages {
+    margin-top: 30px;
   }
   .list-advantages li {
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .list-advantages-img {
     width: 100px;
   }
   .list-advantages-txt {
     margin-left: 50px;
+    margin-bottom: 10px;
+    padding: 20px;
+    font-size: 20px;
     border-radius: 30px;
     border: 4px solid transparent;
     background: linear-gradient(#f5f5f5, #cfcfcf) padding-box,
       linear-gradient(to right, #f3f3f3 0%, #d6d6d6 100%) border-box;
     width: 900px;
-    height: 100px;
+    height: 80px;
     background-color: rgb(243, 228, 228);
-    margin-bottom: 5px;
+  }
+  .technical-card-h {
+    margin-top: 40px;
+  }
+  .technical-card {
+    background-image: url('./img/fon.jpg');
+    margin-top: 40px;
+    width: 1200px;
+  }
+
+  .technical-card-img-one img {
+    width: 100px;
+  }
+  .technical-card-img-one div:first-child {
+    margin-top: 60px;
+  }
+  .technical-card-img-one div:nth-child(2n) {
+    margin-top: 180px;
+  }
+  .block-img-pinikey {
+    padding: 20px;
+  }
+  .pinikey {
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
+  }
+  .technical-card-txt {
+    padding: 60px 10px 0px 10px;
+    width: 50%;
+    font-size: 14px;
+  }
+  .manufacturing {
+    width: 1200px;
+  }
+  .manufacturing img {
+    width: 600px;
+  }
+  footer {
+    background-color: black;
+  }
+  .logo-footer {
+    width: 200px;
   }
 }
