--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header {
   align-items: center;
 }
 /* ------------------ */
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   header {
     width: 100%;
   }
@@ -177,7 +177,7 @@ header {
   }
 }
 /* ------------------ */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .advantages,
   .container {
     padding-left: 5px;
