--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ img {
   background-color: white;
 }
 header {
+  background-color: white;
   position: fixed;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -34,6 +35,8 @@ header {
   align-items: center;
 }
 .hero {
+  margin-left: auto;
+  margin-right: auto;
   background-image: url('./img/webpc-passthru.webp');
   background-size: cover;
   height: 600px;
@@ -87,7 +90,6 @@ header {
   }
   .hero {
     background-image: url('./img/webpc-passthrujpg.jpg');
-    width: 320px;
     margin-top: 32px;
   }
   .hero-content {
@@ -125,10 +127,11 @@ header {
   .list-advantages-txt {
     margin-left: 10px;
     margin-bottom: 5px;
-    padding: 10px;
+    padding-top: 15px;
+    padding-left: 10px;
     font-size: 13px;
     border-radius: 30px;
-    border: 4px solid transparent;
+    border: 2px solid transparent;
     background: linear-gradient(#f5f5f5, #cfcfcf) padding-box,
       linear-gradient(to right, #f3f3f3 0%, #d6d6d6 100%) border-box;
     width: 300px;
@@ -136,11 +139,12 @@ header {
     background-color: rgb(243, 228, 228);
   }
   .technical-card-h {
-    margin-top: 40px;
+    margin-top: 20px;
   }
   .technical-card {
-    background-image: url('./img/fon.jpg');
-    background-color: rgba(255, 255, 255, 0.301);
+    /* background-image: url('./img/fon.jpg'); */
+    background-image: linear-gradient(to top, rgba(255, 255, 255, 0.541), rgba(255, 255, 255, 0.3)),
+      url('./img/fon.jpg');
     margin-top: 40px;
     width: 100%;
   }
