--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  background-color: white;
 }
 header {
   background-color: white;
@@ -57,9 +56,11 @@ header {
   margin-right: auto;
 }
 .technical-card {
+  margin-left: auto;
+  margin-left: auto;
+}
+.technical-card-flex {
   display: flex;
-  margin-left: auto;
-  margin-left: auto;
 }
 .manufacturing {
   display: flex;
@@ -146,7 +147,7 @@ header {
     background-image: linear-gradient(to top, rgba(255, 255, 255, 0.541), rgba(255, 255, 255, 0.3)),
       url('./img/fon.jpg');
     margin-top: 40px;
-    width: 100%;
+    /* width: 100%; */
   }
 
   .technical-card-img-one img {
@@ -164,7 +165,7 @@ header {
     margin-right: auto;
     width: 150px;
   }
-  .technical-card {
+  .technical-card-flex {
     flex-direction: column;
   }
   .technical-card-txt {
@@ -201,7 +202,6 @@ header {
   }
   .hero {
     background-image: url('./img/webpc-passthrujpg.jpg');
-    width: 460px;
     margin-top: 32px;
   }
   .hero-content {
@@ -273,7 +273,7 @@ header {
     margin-right: auto;
     width: 350px;
   }
-  .technical-card {
+  .technical-card-flex {
     flex-direction: column;
   }
   .technical-card-txt {
@@ -359,6 +359,8 @@ header {
     background-image: url('./img/fon.jpg');
     margin-top: 40px;
     width: 748px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .technical-card-img-one img {
@@ -461,6 +463,8 @@ header {
     background-image: url('./img/fon.jpg');
     margin-top: 40px;
     width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .technical-card-img-one img {
