--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ header {
   background-repeat: no-repeat;
   position: relative;
 }
+h2 {
+  text-align: center;
+}
 .hero-content {
   position: absolute;
   color: white;
