--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
 .hero {
   margin-left: auto;
   margin-right: auto;
-  background-image: url('./img/webpc-passthru.webp');
+  background-image: url('./img/0-02-0a-5d296452bde07940beb37f867a690538adb35ae3382d7ad2d62d6eac6915d147_b67f9bb3.jpg');
   background-size: cover;
   height: 600px;
   background-repeat: no-repeat;
@@ -121,7 +121,7 @@ h2 {
     width: 30px;
   }
   .hero {
-    background-image: url('./img/webpc-passthrujpg.jpg');
+    background-image: url('./img/0-02-0a-5d296452bde07940beb37f867a690538adb35ae3382d7ad2d62d6eac6915d147_b67f9bb3.jpg');
     margin-top: 32px;
   }
   .hero-content {
