--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
 .hero {
   margin-left: auto;
   margin-right: auto;
-  background-image: url('./img/0-02-0a-5d296452bde07940beb37f867a690538adb35ae3382d7ad2d62d6eac6915d147_b67f9bb3.jpg');
+  background-image: url('./img/webpc-passthru.webp');
   background-size: cover;
   height: 600px;
   background-repeat: no-repeat;
